<resources>
    <string name="app_name">Homework14</string>
    <string name="new_user">New user!</string>
    <string name="text_title">Mr.</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_country">Country</string>
    <string name="text_date_of_birth">date of birth</string>
    <string name="text_age_const">Age:</string>
    <string name="text_age">30</string>
    <string name="text_state">State</string>
    <string name="text_city">City</string>
    <string name="phone_number_const">Phone number:</string>
    <string name="cell_phone_const">Cell phone:</string>
    <string name="text_gender">female</string>
</resources>